Added implementations for REST task